--- a/proyecto/src/templates/dashboard/client/index.html
+++ b/proyecto/src/templates/dashboard/client/index.html
@@ -38,9 +38,11 @@
                                 <td>{{ r.3 }}</td>
                                 <td>{{ r.fecha_hora }}</td>
                                 <td>{{ r.5 }}</td>
-                                <td class="d-flex justify-content-between btn-group" role="group"> 
-                                    <a name="" id="" class="btn btn-info " href="#" role="button">Modificar</a> 
-                                    <a name="" id="" class="btn btn-danger" href="#" role="button">Eliminar</a>
+                                <td > 
+                                    <div class="d-flex justify-content-between btn-group" role="group">
+                                        <a name="" id="" class="btn btn-info " href="#" role="button">Modificar</a> 
+                                        <a name="" id="" class="btn btn-danger" href="#" role="button">Eliminar</a>
+                                    </div>
                                 </td>
                             </tr>
                         
