--- a/proyecto/src/templates/dashboard/manager/mod_p_perfil.html
+++ b/proyecto/src/templates/dashboard/manager/mod_p_perfil.html
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-between btn-group" role="group">
-                        {% comment %} <a name="" id="" class="btn btn-info" href=" {% url 'modificar_turno' form.id_usuario.value %} " role="button">Modificar turno</a>  {% endcomment %}
+                        {% comment %} <a name="" id="" class="btn btn-warning" href=" {% url 'modificar_turno' form.id_usuario.value %} " role="button">Modificar turno</a>  {% endcomment %}
                         <button  class="btn btn-success" type="submit">Guardar</button>
                         
                         <a type="button" href=" {% url 'perfil_admin' %} " class="btn btn-danger">Cancelar</a>
