--- a/proyecto/src/templates/dashboard/manager/perfil_admin.html
+++ b/proyecto/src/templates/dashboard/manager/perfil_admin.html
@@ -22,7 +22,7 @@
                     <h5>Hora Salida: {{user.empleado.hora_salida}}</h5>
                 </div>
             </div>
-            <a name="" id="" class="btn btn-primary" href="{% url 'edit_perfil' request.user.id_usuario %} " role="button">Modificar</a>
+            <a name="" id="" class="btn btn-warning" href="{% url 'edit_perfil' request.user.id_usuario %} " role="button">Modificar</a>
 
         </div>
     </div>
