--- a/proyecto/src/templates/dashboard/mesas/index.html
+++ b/proyecto/src/templates/dashboard/mesas/index.html
@@ -12,13 +12,15 @@
         <div class="container">
             .<div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Ingrese su RUT</h4>
-                    <div></div>
+                    <div class="mb-3">
+                        <h4 class="card-title">Ingrese su RUT</h4>
+                        <input type="text"
+                            class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                        <small id="helpId" class="form-text text-muted">Help text</small>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-
 </body>
 </html>
