--- a/proyecto/src/templates/dashboard/manager/usuario_mesa/index.html
+++ b/proyecto/src/templates/dashboard/manager/usuario_mesa/index.html
@@ -7,6 +7,8 @@
     <div class="container">
         <div class="card">
             <div class="card-header">
+                <a name="" id="" class="btn btn-warning" href="{% url 'empleados' %}" role="button">Empleados</a>
+
                 <a name="" id="" class="btn btn-success" href="{% url 'crear_usuario_mesa' %}" role="button">Agregar Usuarios Mesa</a>
 
             </div>
