--- a/proyecto/src/templates/dashboard/mesas/base.html
+++ b/proyecto/src/templates/dashboard/mesas/base.html
@@ -2,18 +2,20 @@
 <html lang="es">
 
 <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'dashboard/css/base.css' %}">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+<head>
+    {% load static %}
+    <meta charset="UTF-8">
     {% block client-css %}
     {% endblock client-css %}
 
@@ -22,32 +24,10 @@
 
 <body>
     <div class="container">
-        <header
-            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  py-3 mb-4 border-bottom">
-            <a  class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                <span style="font-weight: normal !important; color: rgb(0, 0, 0);">Bienvenido </span>
-                    <use xlink:href="#bootstrap" />
-                </span>
-            </a>
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <div class="btn-group">
-                    <a class="btn btn-light" type="button" href="#">Empleados </a>
-                    <a class="btn btn-light" type="button" href=" # ">Mesas </a>
-                    <a class="btn btn-light" type="button" href="# "> Clientes</a>
-                    <a class="btn btn-light" type="button" href="#">Menu</a>
-                    {% comment %} <a class="btn btn-light" type="button" href="#">Inventario</a>
-                    <a class="btn btn-light" type="button" href="#">Proveedores</a> {% endcomment %}
-
-                  </div>
-            </ul>
-            <div class="col-md-3 text-end">
-
-                <a href=" {% url 'logout' %} " type="button" class="btn btn-danger">Cerrar sesión</a>
-            </div>
-        </header>
+        {% block mesas-contenido %}
+        {% endblock mesas-contenido %}
     </div>
-    {% block mesas-contenido %}
-    {% endblock mesas-contenido %}
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
