--- a/proyecto/src/templates/dashboard/mesas/base.html
+++ b/proyecto/src/templates/dashboard/mesas/base.html
@@ -1,3 +1,4 @@
+{% load unicorn %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -5,29 +6,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> {% endcomment %}
     <title>Document</title>
+    {% unicorn_scripts %}
 </head>
 <body>
-    
-</body>
-</html>
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    {% block client-css %}
-    {% endblock client-css %}
 
-    <title>Dashboard</title>
-</head>
+    {% csrf_token %}
+    {% block mesas-contenido %}
+    {% endblock mesas-contenido %}
 
-<body>
-    <div class="container">
-        {% block mesas-contenido %}
-        {% endblock mesas-contenido %}
-    </div>
-
+    {% unicorn_scripts %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
