Co-authored-by: AlexNoDraco <AlexNoDraco@users.noreply.github.com>

--- a/proyecto/src/templates/dashboard/manager/cocina/base.html
+++ b/proyecto/src/templates/dashboard/manager/cocina/base.html
@@ -30,13 +30,13 @@
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  py-3 mb-4 border-bottom">
             <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <span style="font-weight: normal !important; color: rgb(0, 0, 0);">Bienvenid@ {{ user.first_name | title  }} &#x2661
-
-
                     <use xlink:href="#bootstrap" />
                 </span>
             </a>
 
-
+            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                <li><a href=" {% url 'receta' %} " class="nav-link px-2 link-dark">Recetas</a></li>
+            </ul>
 
             <div class="col-md-3 text-end">
 
