--- a/proyecto/src/templates/dashboard/manager/cocina/index.html
+++ b/proyecto/src/templates/dashboard/manager/cocina/index.html
@@ -6,6 +6,10 @@
 <section>
     <div class="container">
         <div class="card">
+            <div class="card-header">
+                <a name="" id="" class="btn btn-outline-primary" href="{% url 'receta' %}" role="button">Crear Receta</a>
+
+            </div>
             <div class="card-body">
                 <div class="table-responsive text-center">
                     <table class="table table-light">
