--- a/proyecto/src/templates/dashboard/mesas/base.html
+++ b/proyecto/src/templates/dashboard/mesas/base.html
@@ -1,4 +1,5 @@
-{% load unicorn %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
 
@@ -10,7 +11,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Document</title>
-    {% unicorn_scripts %}
+    
 </head>
 <body>
 
@@ -18,7 +19,8 @@
     {% block mesas-contenido %}
     {% endblock mesas-contenido %}
 
-    {% unicorn_scripts %}
+    {% block scriptss %}
+    {% endblock scriptss %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
