--- a/proyecto/src/templates/dashboard/client/index.html
+++ b/proyecto/src/templates/dashboard/client/index.html
@@ -41,7 +41,7 @@
                                 <td > 
                                     <div class="d-flex justify-content-between btn-group" role="group">
                                         <a name="" id="" class="btn btn-info " href="# " role="button">Modificar</a> 
-                                        <a name="" id="" class="btn btn-danger" href=" {% url 'eliminar_reserva' r.id_reserva %} " role="button">Eliminar</a>
+                                        <a name="" id="" class="btn btn-danger" href=" # " role="button">Eliminar</a>
                                     </div>
                                 </td>
                             </tr>
